[gd_scene load_steps=6 format=2]

[ext_resource path="res://arts/background/background-start.png" type="Texture" id=1]
[ext_resource path="res://audio/Azure Drive - Nefarious Magnetism.wav" type="AudioStream" id=2]
[ext_resource path="res://fonts/Roboto-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://src/objects/screens/start/Start.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 56
use_filter = true
extra_spacing_char = 2
font_data = ExtResource( 3 )

[node name="Start" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 6.10352e-05
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="StartGame" type="Button" parent="."]
pause_mode = 2
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "Start"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
autostart = true
[connection signal="button_up" from="StartGame" to="." method="_on_StartGame_button_up"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
